--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,43 @@
+### IntelliJ IDEA ###
+.idea/
+out/
+**/build/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### Kotlin ###
+.kotlin
+
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+### VS Code ###
+.vscode/
+
+### Mac OS ###
+.DS_Store
+
 # Compiled class file
 *.class
+
+# Gradle
+.gradle/
 
 # Log file
 *.log
